--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,18 +2,19 @@ spring.application.name=usuario-service
 
 server.port=8080
 
-# Configuracion de la base de datos
-spring.datasource.url=jdbc:postgresql://localhost:5432/easyusuarios
-spring.datasource.username=postgres
-spring.datasource.password=a1b2c3d4
-spring.datasource.driver-class-name=org.postgresql.Driver
+# Configuracion de la base de datos (H2 en memoria)
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.h2.console.enabled=true
 
 # Configuracion de JPA (Java Persistence API)
 # create-drop: crea las tablas al arrancar la aplicacion y las elimina al pararla.
 spring.jpa.hibernate.ddl-auto=create-drop
 
-# Dialecto de PostgreSQL para Hibernate
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# Dialecto de H2 para Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # Habilita la visualizacion de las consultas SQL en la consola.
 spring.jpa.show-sql=true
