--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.application.name=usuario-service
+spring.application.name=easysave-service
 
 server.port=8080
 
 # Configuracion de la base de datos
 spring.datasource.url=jdbc:postgresql://localhost:5432/easyusuarios
 spring.datasource.username=postgres
-spring.datasource.password=a1b2c3d4
+spring.datasource.password=0809
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuracion de JPA (Java Persistence API)
