--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # create-drop: crea las tablas al arrancar la aplicacion y las elimina al pararla.
 spring.jpa.hibernate.ddl-auto=create-drop
 
-# Dialecto de H2 para Hibernate
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Dialecto de PostgreSQL para Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Habilita la visualizacion de las consultas SQL en la consola.
 spring.jpa.show-sql=true
