--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>celular-service-0.0.1-SNAPSHOT</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
