--- a/src/main/resources/application-railway.properties
+++ b/src/main/resources/application-railway.properties
@@ -39,6 +39,13 @@ logging.level.root=INFO
 logging.level.co.edu.uceva.celularservice=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 
+# Spring Boot Actuator - Health checks para Railway
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=when-authorized
+management.endpoint.health.probes.enabled=true
+management.health.livenessState.enabled=true
+management.health.readinessState.enabled=true
+
 # Deshabilitar H2 Console en produccion
 spring.h2.console.enabled=false
 
