fix: corregir configuración de PostgreSQL para Railway usando PGHOST, PGPORT y PGDATABASE

--- a/src/main/resources/application-railway.properties
+++ b/src/main/resources/application-railway.properties
@@ -5,8 +5,9 @@ spring.application.name=easysave-service
 server.port=${PORT:8080}
 
 # Base de datos PostgreSQL de Railway
-# IMPORTANTE: Railway inyecta estas variables automáticamente desde el servicio PostgreSQL
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/railway}
+# IMPORTANTE: Railway proporciona estas variables desde el servicio PostgreSQL
+# Railway usa PGHOST, PGPORT, PGDATABASE, PGUSER, PGPASSWORD
+spring.datasource.url=jdbc:postgresql://${PGHOST:localhost}:${PGPORT:5432}/${PGDATABASE:railway}
 spring.datasource.username=${PGUSER:postgres}
 spring.datasource.password=${PGPASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
